<resources>
    <string name="app_name">AmbucycleRider</string>
    <string name="register_text">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="continue_text">Continue</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="permission_require">Location permission require</string>
    <string name="drivers_not_found">Drivers not found!</string>
    <string name="not_found_key">Not found driver with key</string>
    <string name="welcome">Good afternoon</string>
    <string name="choose_a_saved_place">Choose a saved place</string>
    <string name="where_to">Where to?</string>
    <string name="city_name_empty">City name is empty.</string>
    <string name="title_activity_request_driver">Map</string>
    <string name="pay_by_cash">Pay by cash</string>
    <string name="confirm_ambucycle">Confirm Ambucycle</string>
    <string name="confirm_pickup_spot">Confirm Pickup Spot</string>
    <string name="address_demo">136 Ho Tung Mau</string>
    <string name="confirm_pickup">Confirm Pickup</string>
    <string name="finding_your_ambucycle">Finding your Ambucycle!</string>
    <string name="meet_driver_here">Meet driver here.</string>
    <string name="token_not_found">Token not found</string>
    <string name="request_driver_failed">Failed to send request to driver</string>
    <string name="no_driver_accept_request">There are no driver accept your request</string>
    <string name="trip_not_found">Trip not found with key</string>
    <string name="ambu_icu">ICU Ambulance</string>
    <string name="car_number_example">30E-123.45</string>
    <string name="driver_name_example">Andrew Peter</string>
    <string name="ascii_dot">■</string>
    <string name="language_example">Knows English</string>
</resources>