<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/driver_info_layout"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal"
            android:foreground="?attr/selectableItemBackground"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingTop="8dp"
            android:paddingRight="@dimen/activity_margin"
            android:paddingBottom="8dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ambucycle_display"
                    android:layout_marginLeft="50dp"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_driver"
                    android:src="@drawable/ic_baseline_account_circle_24"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true">

                <TextView
                    android:id="@+id/txt_car_type"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/ambu_icu"
                    android:fontFamily="@font/ambucycle_move"
                    android:textColor="#737373"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txt_car_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/car_number_example"
                    android:textColor="#737373"
                    android:textSize="20sp"
                    />



            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingTop="8dp"
            android:paddingRight="@dimen/activity_margin"
            android:paddingBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_driver_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/driver_name_example"
                android:fontFamily="@font/ambucycle_move_bold"
                android:textColor="#737373"
                android:textSize="14sp" />

            <TextView
                android:gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/ascii_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#737373"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/txt_rating"
                android:gravity="center_vertical"
                android:text="4.83"
                android:drawableRight="@drawable/ic_baseline_star_24"
                android:fontFamily="@font/ambucycle_move_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#737373"
                android:textSize="14sp"/>

            <TextView
                android:gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/ascii_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#737373"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/txt_foreign_language"
                android:layout_gravity="center_vertical"
                android:text="@string/language_example"
                android:fontFamily="@font/ambucycle_move_bold"
                android:textColor="#737373"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>




        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingTop="8dp"
            android:paddingRight="@dimen/activity_margin"
            android:paddingBottom="8dp"
            android:weightSum="12">

            <ImageView
                android:id="@+id/img_call_driver"
                android:src="@drawable/ic_baseline_phone_24"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="40dp"/>

            <EditText
                android:id="@+id/edt_note"
                android:layout_weight="10"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/img_call_driver"
                android:hint="Any pickup notes?"
                android:inputType="textMultiLine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/img_send_note"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_wb_sunny_24"
                android:layout_width="0dp"
                android:layout_height="40dp"/>




        </LinearLayout>




    </LinearLayout>

</androidx.cardview.widget.CardView>